src/objects/pse__Timecard_Entry_UI_Personal__c.object
<CustomObject>
    <fields>
        <fullName>pse__Schedule_project_tooltip_fields__c</fullName>
        <defaultValue>&quot;Project_Status__c,Billable_Internal_Hours__c&quot;</defaultValue>
        <description>API names of project fields to be shown when hovering over the tooltip icon in the Schedule section of a timecard.</description>
        <inlineHelpText>API names of project fields to be shown when hovering over the tooltip icon in the Schedule section of a timecard.</inlineHelpText>
        <label>Schedule Project Tooltip Fields</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Show_Alert_For_NonZero_HolidayHours__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Given config is used to show alert if non zero value in entered on the timecard section for the day marked as holiday (having zero hours) in the selected Resource work calendar.</description>
        <inlineHelpText>Given config is used to show alert if non zero value in entered on the timecard section for the day marked as holiday (having zero hours) in the selected Resource work calendar.</inlineHelpText>
        <label>Show Alert For NonZero HolidayHours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Alert_For_NonZero_WeekendHours__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Given config is used to show alert if non zero value in entered on the schedule grid section for the day having zero hours in the selected Resource work calendar days pattern.</description>
        <inlineHelpText>Given config is used to show alert if non zero value in entered on the schedule grid section for the day having zero hours in the selected Resource work calendar days pattern.</inlineHelpText>
        <label>Show Alert For NonZero WeekendHours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Billable_NonBillable_Hours__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If true, billable non-billable hours will show via hover text on each total in the totals row for all the daily columns and sum column on timecard in Time Entry.</description>
        <inlineHelpText>If true, billable non-billable hours will show via hover text on each total in the totals row for all the daily columns and sum column on timecard in Time Entry.</inlineHelpText>
        <label>Show Billable NonBillable Hours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Easy_Entry_Popup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the easy entry popup appears on the Time Entry page when you double-click an editable hour cell on a timecard row or press the DOWN ARROW key while that cell is selected.</description>
        <inlineHelpText>Indicates whether the easy entry popup appears on the Time Entry page when you double-click an editable hour cell on a timecard row or press the DOWN ARROW key while that cell is selected.</inlineHelpText>
        <label>Show Easy Entry Popup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Milestone_As_Field__c</fullName>
        <description>Contains field whose value will be shown on timecard UI milestone drop down list.   If these are missing/null, the TC UI just continues to show the Milestone name fields of the available Milestones in the drop-down list.  No lookup __r references are supported, only fields directly on the Milestone can be used.</description>
        <inlineHelpText>Contains field whose value will be shown on TC UI milestone drop down list.   If these are missing/null, the TC UI just continues to show the Milestone name fields of the available Milestones in the drop-down list.  No lookup __r references are supp</inlineHelpText>
        <label>Show Milestone As Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Show_ProjectName_Assignment_Dropdown__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used to control the display of assignment project name value in the assignment display name on TC project/assignment overlay.</description>
        <label>Show ProjectName Assignment Dropdown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Recall_On_Timecards__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Config is used to control the display recall link on each submitted timecard. On click it, a recall overlay will be open, where we need to enter the comment and recall the approval request for timecard.</description>
        <inlineHelpText>Config is used to control the display recall link on each submitted timecard. On click it, a recall overlay will be open, where we need to enter the comment and recall the approval request for timecard.</inlineHelpText>
        <label>Show Recall On Timecards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Schedule_Grid_Expanded_By_Default__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checked, means schedule grid will be shown expanded on Timecard entry by default.</description>
        <inlineHelpText>Checked, means schedule grid will be shown expanded on Timecard entry by default.</inlineHelpText>
        <label>Show Schedule Grid Expanded By Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Travel__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the Travel checkboxes on the new timecard UI are to be displayed. The default value is true.</description>
        <inlineHelpText>Indicates whether the Travel checkboxes on the new timecard UI are to be displayed. The default value is true.</inlineHelpText>
        <label>Show Travel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_schedule_grid__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If true, schedule grid section will show on timecard ui else not</description>
        <inlineHelpText>If true, schedule grid section will show on timecard ui else not</inlineHelpText>
        <label>Show schedule grid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_schedule_tooltips__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If set to true, shows the tooltip icon next to assignment name on Schedule section of TC UI.Default false (existing behavior, no tooltip column)</description>
        <inlineHelpText>If set to true, shows the tooltip icon next to assignment name on Schedule section of TC UI.Default false (existing behavior, no tooltip column)</inlineHelpText>
        <label>Show Schedule Tooltips</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_timecard_etc__c</fullName>
        <defaultValue>true</defaultValue>
        <description>config to show or hide etc field</description>
        <inlineHelpText>config to show or hide etc field</inlineHelpText>
        <label>Show timecard etc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_timecard_methodology__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If true, timecard methodology field will be show on timecard UI.</description>
        <inlineHelpText>If true, timecard methodology field will be show on timecard UI.</inlineHelpText>
        <label>Show timecard methodology</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_timecard_milestone__c</fullName>
        <defaultValue>true</defaultValue>
        <description>config to show or hide milestone select list</description>
        <inlineHelpText>config to show or hide milestone select list</inlineHelpText>
        <label>Show timecard milestone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_timecard_phase__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If true, timecard Phase field will be show on timecard UI.</description>
        <inlineHelpText>If true, timecard Phase field will be show on timecard UI.</inlineHelpText>
        <label>Show timecard phase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Status_Recall_Column_Not_Fixed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When false, the Status/recall column will display immediately to the right of the Notes column. When true, Status/recall will display to the right of any additional fields.</description>
        <inlineHelpText>When false, the Status/recall column will display immediately to the right of the Notes column. When true, Status/recall will display to the right of any additional fields.</inlineHelpText>
        <label>Status/Recall Column Not Fixed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__TC_HeaderRow_Left_Editable_Fieldset_Name__c</fullName>
        <description>API name of a field set used by the Timecard object. Fields in this field set define the editable fields shown to the left of Hours in the timecard header line of the Timecard UI.</description>
        <inlineHelpText>API name of a field set used by the Timecard object. Fields in this field set define the editable fields shown to the left of Hours in the timecard header line of the Timecard UI.</inlineHelpText>
        <label>TC HeaderRow Left Editable Fieldset Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__TC_Header_Row_Editable_Fieldset_Name__c</fullName>
        <defaultValue>&apos;TimeCard_Header_Row_Editable&apos;</defaultValue>
        <description>API name of a field set used by the Timecard object. Fields in this field set define the editable fields in the timecard header line in the Timecard UI.</description>
        <inlineHelpText>API name of a field set used by the Timecard object. Fields in this field set define the editable fields in the timecard header line in the Timecard UI.</inlineHelpText>
        <label>TC Header Row Editable Fieldset Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__TC_Header_Row_Readonly_Fieldset_Name__c</fullName>
        <defaultValue>&apos;TimeCard_Header_Row_Readonly&apos;</defaultValue>
        <description>API name of a field set used by the Timecard object. Fields in this field set define read-only fields in the timecard header line in the Timecard UI</description>
        <inlineHelpText>API name of a field set used by the Timecard object. Fields in this field set define read-only fields in the timecard header line in the Timecard UI</inlineHelpText>
        <label>TC Header Row Readonly Fieldset Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__TC_Hour_Fields_To_Copy_From_Schedule__c</fullName>
        <defaultValue>&quot;Monday_Hours__c,Tuesday_Hours__c,Wednesday_Hours__c,Thursday_Hours__c,Friday_Hours__c ,Saturday_Hours__c,Sunday_Hours__c&quot;</defaultValue>
        <description>Specify Timecard Hour fields to copy from schedule. Only these hour fields are valid for this config
 &quot;Monday_Hours__c,Tuesday_Hours__c ,Wednesday_Hours__c ,Thursday_Hours__c,Friday_Hours__c ,Saturday_Hours__c,Sunday_Hours__c&quot;</description>
        <inlineHelpText>CSV to specify Timecard Header fields to copy from schedule. Only these hour fields are valid for this config
 &quot;Monday_Hours__c,Tuesday_Hours__c ,Wednesday_Hours__c ,Thursday_Hours__c,Friday_Hours__c ,Saturday_Hours__c,Sunday_Hours__c&quot;</inlineHelpText>
        <label>TC Hour Fields To Copy From Schedule</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>pse__TC_Notes_Field_Editable_Fieldset_Name__c</fullName>
        <defaultValue>&apos;TimeCard_Notes_Field_Editable&apos;</defaultValue>
        <description>API name of a field set used by the Timecard object. Fields in this field set define editable fields in the Notes section in timecard lines in the Timecard UI.</description>
        <inlineHelpText>API name of a field set used by the Timecard object. Fields in this field set define editable fields in the Notes section in timecard lines in the Timecard UI.</inlineHelpText>
        <label>TC Notes Field Editable Fieldset Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__TC_Notes_Field_Readonly_Fieldset_Name__c</fullName>
        <defaultValue>&apos;TimeCard_Notes_Field_Readonly&apos;</defaultValue>
        <description>API name of a field set used by the Timecard object. Fields in this field set define read-only fields in the Notes section in timecard lines in the Timecard UI.</description>
        <inlineHelpText>API name of a field set used by the Timecard object. Fields in this field set define read-only fields in the Notes section in timecard lines in the Timecard UI.</inlineHelpText>
        <label>TC Notes Field Readonly Fieldset Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__TC_Status_To_Hide__c</fullName>
        <description>Field is used to hold coma (,) separated list of timecard status values that will be hide on the TC UI.</description>
        <inlineHelpText>Field is used to hold coma (,) separated list of timecard status values that will be hide on the TC UI.</inlineHelpText>
        <label>TC Status To Hide</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Task_Statuses_To_Hide__c</fullName>
        <description>Specifies tasks to hide when pre-populating in Timecards unless they have associated time logged.  The value is a comma-separated list of statuses.</description>
        <inlineHelpText>Specifies tasks to hide when pre-populating in Timecards unless they have associated time logged.  The value is a comma-separated list of statuses.</inlineHelpText>
        <label>Task Statuses To Hide</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Task_Time_Entry_Assignment_Filter__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether the resource can only select tasks that they have an assignment for when entering time against project tasks. When this option is not selected, users can enable this feature on the Time Entry page.</inlineHelpText>
        <label>Task Time: Only show assigned tasks.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Task_Time_Entry_Date_Filter__c</fullName>
        <defaultValue>&quot;None&quot;</defaultValue>
        <inlineHelpText>Defines the filtering behavior on task dates when choosing tasks to enter time against. Set to None or Overlap. If None, no filtering occurs. If Overlap, tasks are listed only when the timecard and selectable tasks have some overlap on dates.</inlineHelpText>
        <label>Task Time: Filter task dates</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Task_Time_Entry_Mode__c</fullName>
        <defaultValue>&quot;Current&quot;</defaultValue>
        <description>The time entry mode to use when entering task time for a timecard row. You can choose one of these values: Adjust up, Current, Calculated, or Freeform. The default value is Current.</description>
        <inlineHelpText>The time entry mode to use when entering task time for a timecard row. You can choose one of these values: Adjust up, Current, Calculated, or Freeform. The default value is Current.</inlineHelpText>
        <label>Task Time Entry Mode</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Top_assignment_to_show_count__c</fullName>
        <defaultValue>10</defaultValue>
        <description>Number of top assignments to be loaded to show on Project/assignment overlay</description>
        <inlineHelpText>Number of top assignments to be loaded to show on Project/assignment overlay</inlineHelpText>
        <label>Top assignment to show count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Top_assignment_week_load_limit__c</fullName>
        <defaultValue>4</defaultValue>
        <description>Number of weeks for which top assignments/projects to loaded to show on project/assignment overlay</description>
        <inlineHelpText>Number of weeks for which top assignments/projects to loaded to show on project/assignment overlay</inlineHelpText>
        <label>Top_assignment_week_load_limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Top_project_to_show_count__c</fullName>
        <defaultValue>10</defaultValue>
        <description>Number of top projects to be loaded to show on Project/assignment overlay</description>
        <inlineHelpText>Number of top projects to be loaded to show on Project/assignment overlay</inlineHelpText>
        <label>Top project to show count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Use_Field_Set_for_Timecard_UI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows you to switch your preferred method of managing visible fields on the Timecard Entry page. If False, PSA will use configuration options or custom settings to configure the UI. If True, PSA will use field sets to configure the UI.</description>
        <inlineHelpText>Allows you to switch your preferred method of managing visible fields on the Timecard Entry page. If False, PSA will use configuration options or custom settings to configure the UI. If True, PSA will use field sets to configure the UI.</inlineHelpText>
        <label>Use Field Set for Timecard UI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Use_assignment_id__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if an assignment id should be used while displaying assignments on the time card page</description>
        <inlineHelpText>Indicates if an assignment id should be used while displaying assignments on the time card page</inlineHelpText>
        <label>Use assignment id</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Weekend_Color_Code__c</fullName>
        <description>Given field/config is used to color code Scheduled 0-hour days. On a typical 8-hour/5-day schedule, this would be the weekend days, Saturday and Sunday, but this would work for any days that are explicitly 0 hours in the Schedule Pattern (not Holidays) on the selected Resource&apos;s Work Calendar. Customers could set this to a color (could be different than any color chosen for Holidays) and the date-column heading would be color-coded in the same way, with a legend off to the right showing.</description>
        <inlineHelpText>Given field/config is used to color code the date-column heading for Scheduled 0-hour days as per the Schedule Pattern (not Holidays) on the selected Resource&apos;s Work Calendar.</inlineHelpText>
        <label>Weekend Color Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Width_px_for_milestone_drop_down__c</fullName>
        <defaultValue>80</defaultValue>
        <description>Controls the pixel width for Milestone dropdown on Timecard Entry UI. Please specify a whole number for this value, as this will directly go into width. 
For ex a value 300 will set the dropdown width to 300px.  Value specified for this config will override the default 80 pixel width of the dropdown.</description>
        <inlineHelpText>Controls the pixel width for Milestone dropdown on Timecard Entry UI. Please specify a whole number for this value, as this will directly go into width.</inlineHelpText>
        <label>Width_px_for_milestone_drop_down</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Width_px_for_project_assig_drop_down__c</fullName>
        <defaultValue>200</defaultValue>
        <description>Controls the pixel width for Project/Assignment dropdown on Timecard Entry UI. Please specify a whole number for this value, as this will directly go into width. For ex a value 300 will set the dropdown width to 300px.</description>
        <inlineHelpText>Controls the pixel width for Project/Assignment dropdown on Timecard Entry UI. Please specify a whole number for this value, as this will directly go into width. For ex a value 300 will set the dropdown width to 300px.</inlineHelpText>
        <label>Width px for project assig drop down</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Timecard Entry UI Personal</label>
</CustomObject>